update  giscus、comment、imgs、toc and so on

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,15 @@
 {{ partial "header.html" . }}
 
+<!-- 侧边文章结构栏样式 -->
+<!-- {{ partial "post-aside.html" . }} -->
+
+<!-- 侧边文章结构 -->
+<!-- {{ if .TableOfContents }}
+<aside id="aside-post">
+    {{ .TableOfContents }}
+</aside>
+{{ end }}   -->
+
 <section id=content>
   <h1>{{ if .Params.heading }} {{ .Params.heading }} {{ else }} {{ .Title }} {{ end }}</h1>
 
@@ -12,13 +22,22 @@
   <div class="entry-content">
     {{ .Content }}
   </div>
-
   <div id=links>
     {{ if .PrevInSection }}
       <a href="{{.PrevInSection.Permalink}}">&laquo;&nbsp;{{.PrevInSection.Title}}</a>
     {{ end }}
     {{ if .NextInSection }}
       <a href="{{.NextInSection.Permalink}}">{{.NextInSection.Title}}&nbsp;&raquo;</a>
+    {{ end }}
+  </div>
+  {{ partial "giscus.html" . }}
+  <div class="post-comment-wrapper">
+    {{ if eq .Params.comment false }}
+    <p style="opacity: 0.6" align="center">
+        <small>{{ "comments_disabled" }}</small>
+    </p>
+    {{ else }}
+    {{- partial "comment.html" . -}}
     {{ end }}
   </div>
 </section>
