--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,18 +1,8 @@
 {{ partial "header.html" . }}
-
 <section id=content>
-  <ul class=posts_listing>
-    {{ range .Site.RegularPages }}
-      <li>
-        <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-        <div class=date>
-          {{if not .Date.IsZero }}
-            {{ .Date.Format (.Site.Params.dateform | default "January 2006") }}
-          {{end}}
-        </div>
-      </li>
-    {{ end }}
-  </ul>
+    <!-- 引用images中的图片 -->
+    <img title="via:Frederic Forest" src="images/FredericForest_OriginalArt_57x76cm_LeTemps.jpg" alt="FredericForest_OriginalArt_57x76cm_LeTemps" width="100%" height="100%">
+    <!-- <img title="via:Frederic Forest" src="https://i.328888.xyz/2023/05/12/iunGJw.jpeg" alt="iunGJw.jpeg" border="0" /> -->
 </section>
 
 {{ partial "footer.html" . }}
