--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,6 +23,7 @@
     <link rel="canonical" href="{{ .Permalink }}">
 
     {{ partial "styles.html" . }}
+    {{ partial "scroll.html" . }}
 
     {{ range .AlternativeOutputFormats -}}
         {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
