--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -30,14 +30,14 @@
       <a href="{{.NextInSection.Permalink}}">{{.NextInSection.Title}}&nbsp;&raquo;</a>
     {{ end }}
   </div>
-  {{ partial "giscus.html" . }}
+
   <div class="post-comment-wrapper">
     {{ if eq .Site.Params.comment false }}
     <p style="opacity: 0.6" align="center">
         <small>{{ "comments_disabled" }}</small>
     </p>
     {{ else }}
-    {{- partial "comment.html" . -}}
+    {{ partial "comment.html" . }}
     {{ end }}
   </div>
 </section>
