--- a/layouts/partials/styles.html
+++ b/layouts/partials/styles.html
@@ -163,6 +163,18 @@
   h1,h2 {
     margin-top:28px;
   }
+  /* 增加副标题 */
+ span img.emoji {
+    display: inline !important;
+    border: none !important;
+    box-shadow: none !important;
+    height: 1em !important;
+    width: 1em !important;
+    margin: 0 0.07em !important;
+    vertical-align: -0.1em !important;
+    background: none !important;
+    padding: 0 !important;
+  }
 
   #sub-header, .date {
     color:#403c3b;
