--- a/layouts/partials/styles.html
+++ b/layouts/partials/styles.html
@@ -302,6 +302,22 @@
     padding-top: 225px;
   }
 
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ccc;
+  }
+  th, td {
+    padding: 10px;
+    border: 1px solid #ccc;
+    text-align: left;
+  }
+  th {
+    background-color: #f2f2f2;
+  }
+
+
+
   @media (max-width: 750px) {
     body {
       padding-left:20px;
