--- a/layouts/partials/styles.html
+++ b/layouts/partials/styles.html
@@ -95,7 +95,7 @@
   }
 
   .heading,.serif,h1,h2,h3 {
-    font-family:"Old Standard TT",serif;
+    font-family:"Playfair Display","Old Standard TT",serif;
   }
 
   strong {
@@ -233,6 +233,13 @@
   #content .entry-content {
     margin-top:15px;
   }
+  /* 内容 */
+  #content .entry-content a{
+    color: #FFA500;
+    /* 鲜橙色：#FFA500
+    深橙色：#FF6600
+    珊瑚橙：#FF6F61 */
+  }
 
   #content .date {
     margin-left:3px;
@@ -245,7 +252,7 @@
   .highlight {
     margin: 10px 0;
   }
-
+  /* 列表 */
   .posts_listing {
     margin:0 0 50px;
   }
