update content img add border

--- a/layouts/partials/styles.html
+++ b/layouts/partials/styles.html
@@ -240,6 +240,9 @@
     深橙色：#FF6600
     珊瑚橙：#FF6F61 */
   }
+  #content .entry-content img{
+    border: 1px solid #ccc;
+  }
 
   #content .date {
     margin-left:3px;
