update page in home page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 <section id=content>
     <!-- 引用images中的图片 -->
-    <img title="via:Frederic Forest" src="images/FredericForest_OriginalArt_57x76cm_LeTemps.jpg" alt="FredericForest_OriginalArt_57x76cm_LeTemps" width="100%" height="100%">
+    <img title="via:Frederic Forest" src="https://somincola.nyc3.cdn.digitaloceanspaces.com/FredericForest_OriginalArt_57x76cm_LeTemps.jpg" alt="FredericForest_OriginalArt_57x76cm_LeTemps" width="100%" height="100%">
     <!-- <img title="via:Frederic Forest" src="https://i.328888.xyz/2023/05/12/iunGJw.jpeg" alt="iunGJw.jpeg" border="0" /> -->
 </section>
 
